# IDEAL-Refined

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py  test.ipynb
contents/habor-bosch/: Fe939-K50-semi_embedded-326atmH2-326atmN2.xyz  Fe939-K50-semi_embedded-326atmH2-326atmN2_md.xyz  ideal_subs_FeK_650K.xyz  init.xyz  init_FeLi_single_point.xyz  init_Jan_08.xyz
contents/habor-bosch-old/: Fe2086-K39-semi_embedded_deep-306atmH2-326atmN2.xyz  Fe2125-K24-on_surface-326atmH2-326atmN2.xyz  Fe989-K0-semi_embedded_deep-298atmH2-326atmN2.xyz  Fe989-K18-on_surface-326atmH2-326atmN2.xyz  Ru913-Cs17-on_surface-326atmH2-326atmN2.xyz
contents/habor-bosch/particles/: Fe1531-K21-on_surface-326atmH2-326atmN2.xyz  FeLi-19.82A_surface110-100.xyz  FeLi-fcc-18.81A_surface110-111_H2_934_N2_934.xyz  Relaxed_FeLi-19.82A_surface110-100.xyz  (+2 more)
examples/: a.ipynb
examples/generate_struct/: K2O.cif  add_gas.py  generate.py  generate_cut_ball.py  generate_k2o.py  generate_particle.py  generate_with_promoter.py  min_gas_dist_check.py  run.py  selected_surface.res
examples/ideal_md/: habor_bosch.py  hb_FeLi.py  hb_al_template.py  hb_two_stage.py  ideal_data.xyz  offline.py  tools.ipynb  vasp_incar_custom_setting.json
examples/init_cut/: mol.py  slab.py
examples/init_relax/: Fe970-K19-semi_embedded_deep-126atmH2-489atmN2_relaxed.xyz  Relaxed_Fe2125-K24-on_surface-326atmH2-326atmN2.xyz  a.ipynb  relax.py
examples/init_struct/: FeHKN_surface_subs.xyz  gas.py  slab.py
examples/offline_md/: offline.py
src/ideal/: ideal_calculator.py
(+43 files in other folders)
